<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_sudden_plus_table"
    tools:context="com.duraz0rz.iidxtools.suddenpluscalculator.activities.SuddenPlusTableActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tblHiSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:id="@+id/txtHiSpeedHeader"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/hiSpeedHeader" />

                <TextView
                    android:id="@+id/txtMinBPMHeader"
                    android:gravity="center"
                    android:padding="3dp" />

                <TextView
                    android:id="@+id/txtMaxBPMHeader"
                    android:gravity="center"
                    android:padding="3dp" />
            </TableRow>
        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
